# kubizone

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yaml  release.yaml
examples/: cross-namespace-delegation.yaml  delegations-forbids-adoption.yaml  longest-matching-wins.yaml  no-delegation.yaml  simple-record-delegation.yaml
src/: ingress.rs  lib.rs  main.rs  record.rs  zone.rs
tests/: README.md  cross_namespace_adoption.rs  limited_adoption.rs  longest_matching.rs  orphan.rs  orphaned_record.rs  record_adoption.rs  record_delegation_withdrawn.rs  simple.rs  split_namespace_delegation.rs
tests/common/: mod.rs
