[package]
name = "kubizone"
description = "Kubizone Controller"
keywords = ["kubernetes", "kubizone", "crd"]
repository = "https://github.com/kubi-zone/kubizone"
version = "0.3.4"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
time = "0.3"

# Kubernetes
kubizone-crds = "0.10.0"
kubizone-common = "0.13.0"
kube = { version = "0.88", default-features = false, features = ["derive", "rustls-tls", "client", "runtime"] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }

# Async
tokio = { version = "1.33", features = ["macros", "rt"] }
futures = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"]}
