[package]
name = "kubizone"
description = "Kubizone Controller"
keywords = ["kubernetes", "kubizone", "crd"]
repository = "https://github.com/kubi-zone/kubizone"
version = "0.3.5"
edition = "2021"
publish = false

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
time = "0.3"

# Kubernetes
kubizone-crds = { version = "0.12.0", default-features = false }
kubizone-common = "0.13.0"
kube = { version = "0.91.0", default-features = false, features = [
    "derive",
    "rustls-tls",
    "client",
    "runtime",
] }
k8s-openapi = { version = "0.22.0" }

# Async
tokio = { version = "1.33", features = ["macros", "rt"] }
futures = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tracing-subscriber = "0.3.18"
indoc = "2.0.5"
serde_yaml = "0.9.33"
serial_test = "3.1.1"

[features]
# When enabled, will act on custom resources in `dev.kubi.zone` instead of the
# real `kubi.zone api group.
dev = ["kubizone-crds/dev"]
default = ["v1_29"]
v1_30 = ["kubizone-crds/v1_30"]
v1_29 = ["kubizone-crds/v1_29"]
v1_28 = ["kubizone-crds/v1_28"]
v1_27 = ["kubizone-crds/v1_27"]
